Add some notes. 2024/01/21

--- a/【笔记】01 汇编.md
+++ b/【笔记】01 汇编.md
@@ -1,6 +1,4 @@
-# 汇编
-
-[toc]
+# 【笔记】01 汇编
 
 
 
@@ -203,7 +201,7 @@ printf("%d\n", a >> 2);
 
 DTDebug
 
-![image-20240116025202500](images/image-20240116025202500.png)
+![](images/image-20240116025202500.png)
 
 左上窗口：反汇编
 右上窗口：寄存器
@@ -217,6 +215,8 @@ F8：执行
 ## 10 通用寄存器（上）
 
 32位通用寄存器：EAX、ECX、EDX、EBX、ESP、EBP、ESI、EDI
+
+
 
 MOV指令
 
@@ -262,6 +262,8 @@ MOV指令
 
 内存地址：32位
 	0x00000000 ~ 0xFFFFFFFF
+
+
 
 MOV指令
 
@@ -416,15 +418,19 @@ MOV DWORD PTR DS:[00000000], 12345678
 	dw 地址：以两个字节查看内存
 	dd 地址：以四个字节查看内存
 
-![image-20240116025502659](images/image-20240116025502659.png)
+![](images/image-20240116025502659.png)
 
-![image-20240116025535802](images/image-20240116025535802.png)
+![](images/image-20240116025535802.png)
 
-![image-20240116025557492](images/image-20240116025557492.png)
+![](images/image-20240116025557492.png)
 
 
 
 ## 15 常用汇编指令
+
+imm8：8位立即数
+imm16：16位立即数
+imm32：32位立即数
 
 r8：8位通用寄存器
 r16：16位通用寄存器
@@ -434,139 +440,157 @@ m8：8位内存
 m16：16位内存
 m32：32位内存
 
-imm8：8位立即数
-imm16：16位立即数
-imm32：32位立即数
 
-1. MOV指令
-   ```
-   MOV r8/m8, r8
-   MOV r16/m16, r16
-   MOV r32/m32, r32
-   ```
 
-   ```
-   MOV r8, r8/m8
-   MOV r16, r16/m16
-   MOV r32, r32/m32
-   ```
+MOV指令：
 
-   ```
-   MOV r8, imm8
-   MOV r16, imm16
-   MOV r32, imm32
+```
+MOV r8, imm8
+MOV r16, imm16
+MOV r32, imm32
+```
 
-2. ADD指令
-   ```
-   ADD r8/m8, imm8
-   ADD r16/m16, imm16
-   ADD r32/m32, imm32
-   ADD r16/m16, imm8
-   ADD r32/m32, imm8
-   ```
+```
+MOV r8/m8, r8
+MOV r16/m16, r16
+MOV r32/m32, r32
+```
 
-   ```
-   ADD r8/m8, r8
-   ADD r16/m16, r16
-   ADD r32/m32, r32
-   ```
+```
+MOV r8, r8/m8
+MOV r16, r16/m16
+MOV r32, r32/m32
+```
 
-   ```
-   ADD r8, r8/m8
-   ADD r16, r16/m16
-   ADD r32, r32/m32
-   ```
 
-3. SUB指令
-   ```
-   SUB r8/m8, imm8
-   SUB r16/m16, imm16
-   SUB r32/m32, imm32
-   SUB r16/m16, imm8
-   SUB r32/m32, imm8
-   ```
 
-   ```
-   SUB r8/m8, r8
-   SUB r16/m16, r16
-   SUB r32/m32, r32
-   ```
+ADD指令：
 
-   ```
-   SUB r8, r8/m8
-   SUB r16, r16/m16
-   SUB r32, r32/m32
-   ```
+```
+ADD r8/m8, imm8
+ADD r16/m16, imm16
+ADD r32/m32, imm32
+ADD r16/m16, imm8
+ADD r32/m32, imm8
+```
 
-4. AND指令
-   ```
-   AND r8/m8, imm8
-   AND r16/m16, imm16
-   AND r32/m32, imm32
-   AND r16/m16, imm8
-   AND r32/m32, imm8
-   ```
+```
+ADD r8/m8, r8
+ADD r16/m16, r16
+ADD r32/m32, r32
+```
 
-   ```
-   AND r8/m8, r8
-   AND r16/m16, r16
-   AND r32/m32, r32
-   ```
+```
+ADD r8, r8/m8
+ADD r16, r16/m16
+ADD r32, r32/m32
+```
 
-   ```
-   AND r8, r8/m8
-   AND r16, r16/m16
-   AND r32, r32/m32
-   ```
 
-5. OR指令
-   ```
-   OR r8/m8, imm8
-   OR r16/m16, imm16
-   OR r32/m32, imm32
-   OR r16/m16, imm8
-   OR r32/m32, imm8
-   ```
 
-   ```
-   OR r8/m8, r8
-   OR r16/m16, r16
-   OR r32/m32, r32
-   ```
+SUB指令：
 
-   ```
-   OR r8, r8/m8
-   OR r16, r16/m16
-   OR r32, r32/m32
-   ```
+```
+SUB r8/m8, imm8
+SUB r16/m16, imm16
+SUB r32/m32, imm32
+SUB r16/m16, imm8
+SUB r32/m32, imm8
+```
 
-6. XOR指令
-   ```
-   XOR r8/m8, imm8
-   XOR r16/m16, imm16
-   XOR r32/m32, imm32
-   XOR r16/m16, imm8
-   XOR r32/m32, imm8
-   ```
+```
+SUB r8/m8, r8
+SUB r16/m16, r16
+SUB r32/m32, r32
+```
 
-   ```
-   XOR r8/m8, r8
-   XOR r16/m16, r16
-   XOR r32/m32, r32
-   ```
+```
+SUB r8, r8/m8
+SUB r16, r16/m16
+SUB r32, r32/m32
+```
 
-   ```
-   XOR r8, r8/m8
-   XOR r16, r16/m16
-   XOR r32, r32/m32
-   ```
 
-7. NOT指令
-   ```
-   NOT r8/m8
-   NOT r16/m16
-   NOT r32/m32
-   ```
+
+AND指令：
+
+```
+AND r8/m8, imm8
+AND r16/m16, imm16
+AND r32/m32, imm32
+AND r16/m16, imm8
+AND r32/m32, imm8
+```
+
+```
+AND r8/m8, r8
+AND r16/m16, r16
+AND r32/m32, r32
+```
+
+```
+AND r8, r8/m8
+AND r16, r16/m16
+AND r32, r32/m32
+```
+
+
+
+OR指令：
+
+```
+OR r8/m8, imm8
+OR r16/m16, imm16
+OR r32/m32, imm32
+OR r16/m16, imm8
+OR r32/m32, imm8
+```
+
+```
+OR r8/m8, r8
+OR r16/m16, r16
+OR r32/m32, r32
+```
+
+```
+OR r8, r8/m8
+OR r16, r16/m16
+OR r32, r32/m32
+```
+
+
+
+XOR指令：
+
+```
+XOR r8/m8, imm8
+XOR r16/m16, imm16
+XOR r32/m32, imm32
+XOR r16/m16, imm8
+XOR r32/m32, imm8
+```
+
+```
+XOR r8/m8, r8
+XOR r16/m16, r16
+XOR r32/m32, r32
+```
+
+```
+XOR r8, r8/m8
+XOR r16, r16/m16
+XOR r32, r32/m32
+```
+
+
+
+NOT指令：
+
+```
+NOT r8/m8
+NOT r16/m16
+NOT r32/m32
+```
 
 
 
@@ -584,102 +608,219 @@ EFL：标志寄存器
 
 DF：方向位
 
-1. MOVS指令
 
-   1. DS:[ESI] → ES:[EDI]（1字节）
-      DF = 0：ESI + 1 → ESI、EDI + 1 → EDI
-      DF = 1：ESI - 1 → ESI、EDI - 1 → EDI
 
-      ```
-      MOVS BYTE PTR ES:[EDI], BYTE PTR DS:[ESI]
-      ```
+MOVS指令
 
-      简写为：
-      ```
-      MOVSB
-      ```
-
-   2. DS:[ESI] → ES:[EDI]（2字节）
-      DF = 0：ESI + 2 → ESI、EDI + 2 → EDI
-      DF = 1：ESI - 2 → ESI、EDI - 2 → EDI
-
-      ```
-      MOVS WORD PTR ES:[EDI], WORD PTR DS:[ESI]
-      ```
-
-      简写为：
-      ```
-      MOVSW
-      ```
-
-   3. DS:[ESI] → ES:[EDI]（4字节）
-      DF = 0：ESI + 4 → ESI、EDI + 4 → EDI
-      DF = 1：ESI - 4 → ESI、EDI - 4 → EDI
-
-      ```
-      MOVS DWORD PTR ES:[EDI], DWORD PTR DS:[ESI]
-      ```
-
-      简写为：
-      ```
-      MOVSD
-      ```
-
-2. STOS指令
-
-   1. AL → ES:[EDI]
-      DF = 0：EDI + 1 → EDI
-      DF = 1：EDI - 1 → EDI
-
-      ```
-      STOS BYTE PTR ES:[EDI]
-      ```
-
-      简写为：
-      ```
-      STOSB
-      ```
-
-   2. AX → ES:[EDI]
-      DF = 0：EDI + 2 → EDI
-      DF = 1：EDI - 2 → EDI
-
-      ```
-      STOS WORD PTR ES:[EDI]
-      ```
-
-      简写为：
-      ```
-      STOSW
-      ```
-
-   3. EAX → ES:[EDI]
-      DF = 0：EDI + 4 → EDI
-      DF = 1：EDI - 4 → EDI
-
-      ```
-      STOS DWORD PTR ES:[EDI]
-      ```
-
-      简写为：
-      ```
-      STOSD
-      ```
-
-3. REP指令
-   ECX：计数寄存器
+1. DS:[ESI] → ES:[EDI]（1字节）
+   DF = 0：ESI + 1 → ESI、EDI + 1 → EDI
+   DF = 1：ESI - 1 → ESI、EDI - 1 → EDI
 
    ```
-   MOV ECX, 10
-   REP MOVSD
+   MOVS BYTE PTR ES:[EDI], BYTE PTR DS:[ESI]
+   ```
+   
+   简写为：
+   ```
+   MOVSB
    ```
 
+2. DS:[ESI] → ES:[EDI]（2字节）
+   DF = 0：ESI + 2 → ESI、EDI + 2 → EDI
+   DF = 1：ESI - 2 → ESI、EDI - 2 → EDI
+
    ```
-   MOV ECX, 10
-   REP STOSD
+   MOVS WORD PTR ES:[EDI], WORD PTR DS:[ESI]
    ```
+
+   简写为：
+   ```
+   MOVSW
+   ```
+
+3. DS:[ESI] → ES:[EDI]（4字节）
+   DF = 0：ESI + 4 → ESI、EDI + 4 → EDI
+   DF = 1：ESI - 4 → ESI、EDI - 4 → EDI
+
+   ```
+   MOVS DWORD PTR ES:[EDI], DWORD PTR DS:[ESI]
+   ```
+
+   简写为：
+   ```
+   MOVSD
+   ```
+
+
+
+STOS指令
+
+1. AL → ES:[EDI]
+   DF = 0：EDI + 1 → EDI
+   DF = 1：EDI - 1 → EDI
+
+   ```
+   STOS BYTE PTR ES:[EDI]
+   ```
+
+   简写为：
+   ```
+   STOSB
+   ```
+
+2. AX → ES:[EDI]
+   DF = 0：EDI + 2 → EDI
+   DF = 1：EDI - 2 → EDI
+
+   ```
+   STOS WORD PTR ES:[EDI]
+   ```
+
+   简写为：
+   ```
+   STOSW
+   ```
+
+3. EAX → ES:[EDI]
+   DF = 0：EDI + 4 → EDI
+   DF = 1：EDI - 4 → EDI
+
+   ```
+   STOS DWORD PTR ES:[EDI]
+   ```
+
+   简写为：
+   ```
+   STOSD
+   ```
+
+
+
+REP指令
+ECX：计数寄存器
+
+```
+MOV ECX, 10
+REP MOVSD
+```
+
+```
+MOV ECX, 10
+REP STOSD
+```
 
 
 
 ## 17 堆栈相关指令
+
+![](images/image-20240116221848070.png)
+
+堆栈顶部地址：0x001A0000
+堆栈底部地址：0x0019C000
+
+堆栈的使用：顶部 → 底部
+
+ESP：栈顶指针寄存器
+
+
+
+PUSH指令
+	修改ESP
+	向栈顶压入数据
+
+```
+PUSH imm32
+PUSH r16/m16
+PUSH r32/m32
+```
+
+1. ESP - 2 → ESP
+   ```
+   PUSH r16/m16
+   ```
+
+2. ESP - 4 → ESP
+   ```
+   PUSH imm32
+   PUSH r32/m32
+   ```
+
+
+
+POP指令
+	从栈顶弹出数据
+	修改ESP
+
+```
+POP r16/m16
+POP r32/m32
+```
+
+1. ESP + 2 → ESP
+   ```
+   POP r16/m16
+   ```
+
+2. ESP + 4 → ESP
+   ```
+   POP r32/m32
+   ```
+   
+
+
+
+## 18 修改EIP的指令
+
+JMP指令
+
+```
+JMP imm32/r32/m32
+```
+
+相当于
+
+```
+MOV EIP, imm32/r32/m32
+```
+
+
+
+CALL指令
+
+```
+CALL imm32/r32/m32
+```
+
+相当于
+
+```
+PUSH 下一行指令的地址
+MOV EIP, imm32/r32/m32
+```
+
+CALL与JMP唯一的区别：CALL在堆栈中存储下一行指令的地址
+
+
+
+RET指令
+
+```
+RET
+```
+
+相当于
+
+```
+POP EIP
+```
+
+视频中的幻灯片存疑：
+
+![](images/image-20240121043823951.png)
+
+应该为“先mov，再修改ESP”，因为pop操作是“先从栈顶弹出数据，再修改ESP”
+
+
+
+## 19 反调试之Fake F8
 
