Add some notes. 2024/01/21

--- a/【笔记】01 汇编.md
+++ b/【笔记】01 汇编.md
@@ -598,15 +598,10 @@ NOT r32/m32
 
 EFL：标志寄存器
 
-|  位  |  15  |  14  |  13  |  12  |  11  |  10  |  9   |  8   |  7   |  6   |  5   |  4   |  3   |  2   |  1   |  0   |
-| :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
-| 标志 |      |      |      |      |      |  DF  |      |      |      |      |      |      |      |      |      |      |
-
-|  位  |  31  |  30  |  29  |  28  |  27  |  26  |  25  |  24  |  23  |  22  |  21  |  20  |  19  |  18  |  17  |  16  |
-| :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
-| 标志 |      |      |      |      |      |      |      |      |      |      |      |      |      |      |      |      |
-
-DF：方向位
+|  位  | 31 ~ 12 |    11    |    10    |      9       |    8     |    7     |   6    |  5   |      4       |  3   |    2     |  1   |    0     |
+| :--: | :-----: | :------: | :------: | :----------: | :------: | :------: | :----: | :--: | :----------: | :--: | :------: | :--: | :------: |
+| 标志 |         |    OF    |    DF    |      IF      |    TF    |    SF    |   ZF   |      |      AF      |      |    PF    |      |    CF    |
+| 含义 |         | 溢出标志 | 方向标志 | 中断使能标志 | 单步标志 | 符号标志 | 零标志 |      | 辅助进位标志 |      | 奇偶标志 |      | 进位标志 |
 
 
 
@@ -814,13 +809,259 @@ RET
 POP EIP
 ```
 
-视频中的幻灯片存疑：
-
-![](images/image-20240121043823951.png)
-
-应该为“先mov，再修改ESP”，因为pop操作是“先从栈顶弹出数据，再修改ESP”
-
 
 
 ## 19 反调试之Fake F8
+
+F7：单步步入（进入CALL），设置EFLAGS的TF位
+F8：单步步过 （不进入CALL），在下一行设置断点（0xCC）
+F2：设置断点（0xCC）
+
+
+
+## 20 汇编眼中的函数
+
+函数：一系列指令的集合，完成某个会重复使用的特定功能
+
+执行一个函数 / 调用函数：CALL
+传参：寄存器、堆栈
+EAX：存储函数的返回值
+
+
+
+## 21 堆栈传参
+
+略
+
+
+
+## 22 堆栈平衡
+
+堆栈平衡：
+	如果要返回父程序，则一定要保证在执行RET指令之前，ESP指向的是压入栈中的地址
+	如果通过堆栈传递参数了，则在函数执行完毕后，要平衡参数导致的堆栈变化
+
+外平栈：
+
+```
+PUSH 1
+PUSH 2
+CALL 函数地址
+ADD ESP, 8
+···
+（函数地址）
+MOV EAX, DWORD PTR SS:[ESP+8]
+ADD EAX, DWORD PTR SS:[ESP+4]
+RET
+```
+
+内平栈：
+
+```
+PUSH 1
+PUSH 2
+CALL 函数地址
+···
+（函数地址）
+MOV EAX, DWORD PTR SS:[ESP+8]
+ADD EAX, DWORD PTR SS:[ESP+4]
+RET 8
+```
+
+
+
+## 23 外挂是什么
+
+略
+
+
+
+## 24 ESP寻址
+
+堆栈平衡：外平栈、内平栈
+
+
+
+## 25 EBP寻址
+
+EBP：栈底指针寄存器
+
+```
+PUSH 1
+PUSH 2
+CALL 函数地址
+···
+（函数地址）
+PUSH EBP
+MOV EBP, ESP
+MOV EAX, DWORD PTR SS:[EBP+8]
+ADD EAX, DWORD PTR SS:[EBP+C]
+MOV ESP, EBP
+POP EBP
+RET
+```
+
+
+
+## 26 JCC
+
+EFL：标志寄存器
+
+|  位  | 31 ~ 12 |    11    |    10    |      9       |    8     |    7     |   6    |  5   |      4       |  3   |    2     |  1   |    0     |
+| :--: | :-----: | :------: | :------: | :----------: | :------: | :------: | :----: | :--: | :----------: | :--: | :------: | :--: | :------: |
+| 标志 |         |    OF    |    DF    |      IF      |    TF    |    SF    |   ZF   |      |      AF      |      |    PF    |      |    CF    |
+| 含义 |         | 溢出标志 | 方向标志 | 中断使能标志 | 单步标志 | 符号标志 | 零标志 |      | 辅助进位标志 |      | 奇偶标志 |      | 进位标志 |
+
+CF（Carry Flag）：无符号数运算溢出时CF=1，否则CF=0
+
+```
+MOV AL, 0FE
+ADD AL, 2
+```
+
+```
+MOV AL, 7F
+SUB AL, 0FF
+```
+
+PF（Parity Flag）：最低有效字节包含偶数个1时PF=1，否则PF=0，用于奇偶校验
+
+```
+MOV AL, 0CE
+ADD AL, 0
+```
+
+ AF（Auxiliary Carry Flag）：结果的第3位发生进位或借位时AF=1，否则为AF=0，用于BCD算数运算
+
+ZF（Zero Flag）：结果为0时ZF=1，否则ZF=0，用于CMP、TEST指令
+
+判断两个值是否相等：
+
+```
+MOV EAX, 100
+MOV ECX, 100
+CMP EAX, ECX
+```
+
+判断某个值是否为0：
+
+```
+TEST EAX, EAX
+```
+
+SF（Sign Flag）：结果为负时SF=1，否则SF=0
+
+```
+MOV AL, 0FE
+ADD AL, 2
+```
+
+```
+MOV AL, 7F
+ADD AL, 2
+```
+
+OF（Overflow Flag）：有符号数运算溢出时OF=1，否则OF=0
+
+```
+MOV AL, 7F
+ADD AL, 2
+```
+
+无符号数运算是否溢出看CF位
+有符号数运算是否溢出看OF位
+
+DF（Direction Flag）：用于串指令（MOVS、STOS、LODS、CMPS、SCAS）
+	STD指令：设置DF（DF=1） → 自动递减，从高地址向低地址方向处理字符串
+	CLD指令：清除DF（DF=0） → 自动递增，从低地址向高地址方向处理字符串
+
+
+
+| 指令 | 跳转条件   | 标志位 |
+| :--- | ---------- | :----: |
+| JE   | 结果相等   | ZF = 1 |
+| JNE  | 结果不相等 | ZF = 0 |
+
+
+
+| 指令 | 跳转条件  | 标志位 |
+| :--- | --------- | :----: |
+| JZ   | 结果为0   | ZF = 1 |
+| JNZ  | 结果不为0 | ZF = 0 |
+
+
+
+| 指令 | 跳转条件   | 标志位 |
+| :--- | ---------- | :----: |
+| JS   | 结果为负   | SF = 1 |
+| JNS  | 结果不为负 | SF = 0 |
+
+
+
+| 指令      | 跳转条件            | 标志位 |
+| :-------- | ------------------- | :----: |
+| JP / JPE  | 结果中1的个数为偶数 | PF = 1 |
+| JNP / JPO | 结果中1的个数为奇数 | PF = 0 |
+
+
+
+| 指令 | 跳转条件     | 标志位 |
+| :--- | ------------ | :----: |
+| JO   | 结果溢出     | OF = 1 |
+| JNO  | 结果没有溢出 | OF = 0 |
+
+
+
+| 指令 | 跳转条件     | 标志位 |
+| :--- | ------------ | :----: |
+| JC   | 结果进位     | CF = 1 |
+| JNC  | 结果没有进位 | CF = 0 |
+
+
+
+| 指令      | 跳转条件                              | 标志位 |
+| :-------- | ------------------------------------- | :----: |
+| JB / JNAE | 结果小于 / 结果不大于等于（无符号数） | CF = 1 |
+| JNB / JAE | 结果不小于 / 结果大于等于（无符号数） | CF = 0 |
+
+
+
+| 指令      | 跳转条件                              |      标志位      |
+| :-------- | ------------------------------------- | :--------------: |
+| JBE / JNA | 结果小于等于 / 结果不大于（无符号数） | CF = 1 或 ZF = 1 |
+| JNBE / JA | 结果不小于等于 / 结果大于（无符号数） | CF = 0 且 ZF = 0 |
+
+
+
+| 指令      | 跳转条件                              | 标志位  |
+| :-------- | ------------------------------------- | :-----: |
+| JL / JNGE | 结果小于 / 结果不大于等于（有符号数） | SF ≠ OF |
+| JNL / JGE | 结果不小于 / 结果大于等于（有符号数） | SF = OF |
+
+
+
+| 指令      | 跳转条件                              |      标志位       |
+| :-------- | ------------------------------------- | :---------------: |
+| JLE / JNG | 结果小于等于 / 结果不大于（有符号数） | SF ≠ OF 或 ZF = 1 |
+| JNLE / JG | 结果不小于等于 / 结果大于（有符号数） | SF = OF 且 ZF = 0 |
+
+
+
+常用：
+	JNBE / JA：结果不小于等于 / 结果大于（无符号数），CF=0且ZF=0时跳转
+	JNLE / JG：结果不小于等于 / 结果大于（有符号数），SF=OF且ZF=0时跳转
+
+```
+MOV AL, 0FF
+MOV CL, 1
+CMP AL, CL
+JA 跳转地址
+```
+
+```
+MOV AL, 0FF
+MOV CL, 1
+CMP AL, CL
+JG 跳转地址
+```
 
