Add some notes. 2024/01/22

--- a/【笔记】01 汇编.md
+++ b/【笔记】01 汇编.md
@@ -739,6 +739,17 @@ PUSH r32/m32
    PUSH imm32
    PUSH r32/m32
    ```
+   
+   ```
+   PUSH EAX
+   ```
+   
+   等价于：
+   
+   ```
+   SUB ESP, 4
+   MOV DWORD PTR SS:[ESP], EAX
+   ```
 
 
 
@@ -761,6 +772,16 @@ POP r32/m32
    POP r32/m32
    ```
    
+   ```
+   POP EAX
+   ```
+   
+   等价于：
+   
+   ```
+   MOV EAX, DWORD PTR SS:[ESP]
+   ADD ESP, 4
+   ```
 
 
 
@@ -772,7 +793,7 @@ JMP指令
 JMP imm32/r32/m32
 ```
 
-相当于
+相当于：
 
 ```
 MOV EIP, imm32/r32/m32
@@ -786,7 +807,7 @@ CALL指令
 CALL imm32/r32/m32
 ```
 
-相当于
+相当于：
 
 ```
 PUSH 下一行指令的地址
@@ -803,7 +824,7 @@ RET指令
 RET
 ```
 
-相当于
+相当于：
 
 ```
 POP EIP
@@ -887,19 +908,19 @@ RET 8
 EBP：栈底指针寄存器
 
 ```
-PUSH 1
-PUSH 2
+···
 CALL 函数地址
 ···
 （函数地址）
 PUSH EBP
 MOV EBP, ESP
-MOV EAX, DWORD PTR SS:[EBP+8]
-ADD EAX, DWORD PTR SS:[EBP+C]
+···
 MOV ESP, EBP
 POP EBP
 RET
 ```
+
+![](images/image-20240122003246288.png)
 
 
 
