Add some notes.

--- a/【笔记】02 C.md
+++ b/【笔记】02 C.md
@@ -31,23 +31,15 @@ int plus(int x, int y) {
 }
 ```
 
-![](images/image-20240122003246288.png)
-
-
+<img src="images/image-20240126131549693.png" style="zoom:50%;" />
 
 ```c
-int plus(int x, int y) {
-	return x + y;
-}
-
-void main() {
-	plus(1, 2);
-	return;
-}
+plus(1, 2);
 ```
 
+<img src="images/image-20240126131723670.png" style="zoom:50%;" />
+
 参数传递顺序：从右向左
-![](images/image-20240122001254287.png)
 
 
 
@@ -72,9 +64,7 @@ void main() {
 }
 ```
 
-![](images/image-20240122005112006.png)
-
-
+<img src="images/image-20240126131953747.png" style="zoom:50%;" />
 
 局部变量：
 	函数内部申请的
@@ -92,11 +82,9 @@ void main() {
 }
 ```
 
-![](images/image-20240122011004767.png)
+<img src="images/image-20240126132220658.png" style="zoom:50%;" />
 
-![](images/image-20240122010857543.png)
-
-
+<img src="images/image-20240126132344328.png" style="zoom:50%;" />
 
 初始值：
 	全局变量：可以没有初始值而直接使用，系统默认初始值为0
@@ -105,4 +93,95 @@ void main() {
 
 
 ## 04 变量与参数的内存布局
+
+参数在内存中的位置
+局部变量在内存中的位置
+返回值如何返回，如何使用
+
+<img src="images/image-20240129220021406.png" style="zoom:50%;" />
+
+```c
+int plus(int x, int y) {
+	int z = x + y;
+	return z;
+}
+
+void main() {
+	int r = plus(1, 2);
+	return;
+}
+```
+
+<img src="images/image-20240126134323787.png" style="zoom:50%;" />
+
+<img src="images/image-20240126134454642.png" style="zoom:50%;" />
+
+<img src="images/image-20240129222050446.png" style="zoom:50%;" />
+
+
+
+## 05 函数嵌套调用的内存布局
+
+Build分为Release版和Debug版两种：
+<img src="images/image-20240126233403847.png" style="zoom:50%;" />
+
+
+
+```c
+int plus1(int x, int y) {
+	int z = x + y;
+	return z;
+}
+
+int plus2(int x, int y, int z) {
+	int m = plus1(x, y);
+	int n = m + z;
+	return n;
+}
+
+void main() {
+	int r = plus2(1, 2, 3);
+	return;
+}
+```
+
+<img src="images/image-20240129220820732.png" style="zoom:50%;" />
+
+<img src="images/image-20240129222208683.png" style="zoom:50%;" />
+
+<img src="images/image-20240129222305799.png" style="zoom:50%;" />
+
+<img src="images/image-20240129224018022.png" style="zoom:50%;" />
+
+
+
+```c
+int plus1(int x, int y) {
+	return x + y;
+}
+
+int plus2(int x, int y, int z) {
+	return plus1(x, y) + z;
+}
+
+void main() {
+	int r = plus2(1, 2, 3);
+	return;
+}
+```
+
+<img src="images/image-20240129230649024.png" style="zoom:50%;" />
+
+<img src="images/image-20240129230743665.png" style="zoom:50%;" />
+
+<img src="images/image-20240129230835351.png" style="zoom:50%;" />
+
+
+
+
+
+## 06 整数类型
+
+C语言变量类型
+	基本类型整数类型
 
