--- a/【笔记】01 汇编.md
+++ b/【笔记】01 汇编.md
@@ -66,24 +66,24 @@ C语言、C++语言：
 
 ## 03 二进制简写形式
 
-| 二进制 | 十六进制 |
-| :----: | :------: |
-|  0000  |   0x0    |
-|  0001  |   0x1    |
-|  0010  |   0x2    |
-|  0011  |   0x3    |
-|  0100  |   0x4    |
-|  0101  |   0x5    |
-|  0110  |   0x6    |
-|  0111  |   0x7    |
-|  1000  |   0x8    |
-|  1001  |   0x9    |
-|  1010  |   0xA    |
-|  1011  |   0xB    |
-|  1100  |   0xC    |
-|  1101  |   0xD    |
-|  1110  |   0xE    |
-|  1111  |   0xF    |
+| 十进制 | 二进制 | 十六进制 |
+| :----: | :----: | :------: |
+|   0    |  0000  |   0x0    |
+|   1    |  0001  |   0x1    |
+|   2    |  0010  |   0x2    |
+|   3    |  0011  |   0x3    |
+|   4    |  0100  |   0x4    |
+|   5    |  0101  |   0x5    |
+|   6    |  0110  |   0x6    |
+|   7    |  0111  |   0x7    |
+|   8    |  1000  |   0x8    |
+|   9    |  1001  |   0x9    |
+|   10   |  1010  |   0xA    |
+|   11   |  1011  |   0xB    |
+|   12   |  1100  |   0xC    |
+|   13   |  1101  |   0xD    |
+|   14   |  1110  |   0xE    |
+|   15   |  1111  |   0xF    |
 
 
 
