Add some notes. 2024/01/31

--- a/【笔记】02 C.md
+++ b/【笔记】02 C.md
@@ -183,5 +183,195 @@ void main() {
 ## 06 整数类型
 
 C语言变量类型
-	基本类型整数类型
+	基本类型
+		整数类型
+		浮点类型
+	构造类型
+		数组类型
+		结构体类型
+		共用体（联合）类型
+	指针类型
+	空类型（void）
+
+整数类型：
+
+| 整数类型 | 宽度 | 字节 |          范围           |
+| :------: | :--: | :--: | :---------------------: |
+|   char   | 8位  |  1   |       0x00 ~ 0xFF       |
+|  short   | 16位 |  2   |     0x0000 ~ 0xFFFF     |
+|   int    | 32位 |  4   | 0x00000000 ~ 0xFFFFFFFF |
+|   long   | 32位 |  4   | 0x00000000 ~ 0xFFFFFFFF |
+
+16位的计算机：short宽度 = int宽度 = 16位
+32位及以上的计算机：int宽度 = long宽度 = 32位
+
+**int对char的符号扩展？**
+
+
+
+## 07 浮点类型
+
+浮点类型：
+
+|  浮点类型   | 宽度 | 字节 |
+| :---------: | :--: | :--: |
+|    float    | 32位 |  4   |
+|   double    | 64位 |  8   |
+| long double | 64位 |  8   |
+
+```c
+float f = 1.23F;
+double d = 4.56;
+long double l = 7.89L;
+```
+
+IEEE编码规范
+
+float：32位
+
+|   31   | 30 ~ 23  |  22 ~ 0  |
+| :----: | :------: | :------: |
+|  1位   |   8位    |   23位   |
+| 符号位 | 指数部分 | 尾数部分 |
+
+double：64位
+
+|   63   | 62 ~ 52  |  51 ~ 0  |
+| :----: | :------: | :------: |
+|  1位   |   11位   |   52位   |
+| 符号位 | 指数部分 | 尾数部分 |
+
+转浮点类型：
+	整数部分：一定可以完整地转换成二进制
+	小数部分：不可能做到完全精确
+
+8.25转float类型：
+	整数部分：1000（8）
+	小数部分：0.01（0.25）
+	1000.01 → 1.00001 * 2<sup>3</sup>
+		符号位：0
+		指数部分：10000010
+		小数部分：00001000000000000000000
+		→ 0  10000010  00001000000000000000000
+		→ 0100  0001  0000  0100  0000  0000  0000  0000
+		→ 0x41040000
+<img src="images/image-20240131015126901.png" style="zoom:50%;" />
+
+精度：尾数的位数
+	float：7位有效数字，2<sup>23</sup> = 8388608（7位）
+	double：16位有效数字，2<sup>52</sup> = 4503599627370496（16位）
+
+
+
+## 08 字符与字符串
+
+char：8位，1个字节
+
+ASCII（American Standard Code for Information Interchange，美国标准信息交换代码）
+
+```c
+#include<stdio.h>
+
+void main() {
+	int x = 'A';
+	printf("%d\n", x);
+	putchar(x);
+	putchar('\n');
+	return;
+}
+```
+
+运行结果：
+
+```
+65
+A
+```
+
+
+
+```c
+#include<stdio.h>
+
+void main() {
+	char x = 65;
+	printf("%d\n", x);
+	putchar(x);
+	putchar('\n');
+	return;
+}
+```
+
+运行结果：
+
+```
+65
+A
+```
+
+
+
+printf函数：
+
+```c
+#include<stdio.h>
+
+void main() {
+	int x = 0xFFFFFFFF;
+	printf("%d\n", x);
+	printf("%u\n", x);
+	printf("%x\n", x);
+	return;
+}
+```
+
+运行结果：
+
+```
+-1
+4294967295
+ffffffff
+```
+
+
+
+```c
+#include<stdio.h>
+
+void main() {
+	float f = 3.1415F;
+	printf("%6.2f\n", f);
+	return;
+}
+```
+
+运行结果：
+
+```
+  3.14
+```
+
+
+
+```c
+#include<stdio.h>
+
+void main() {
+	char buffer[20] = "Hello, World!";
+	printf("%s\n", buffer);
+	return;
+}
+```
+
+运行结果：
+
+```
+Hello, World!
+```
+
+
+
+## 09 中文字符
+
+
 
