Add some notes. 2024/03/28

--- a/【笔记】02 C.md
+++ b/【笔记】02 C.md
@@ -369,7 +369,234 @@ void main() {
 Hello, World!
 ```
 
+<img src="images/image-20240328004436947.png" style="zoom:50%;" />
+
+<img src="images/image-20240328004841104.png" style="zoom:50%;" />
+
 
 
 ## 09 中文字符
 
+国标码：
+一个汉字：两个大于127的字符连在一起
+7000多个简体汉字
+GB2312、GB2312-80
+
+```c
+#include<stdio.h>
+
+void main() {
+	char buffer[20] = "中国";
+	printf("%s\n", buffer);
+	return;
+}
+```
+
+运行结果：
+
+```
+中国
+```
+
+<img src="images/image-20240328010453199.png" style="zoom:50%;" />
+
+<img src="images/image-20240328010532176.png" style="zoom:50%;" />
+
+
+
+## 10 运算符与表达式
+
+类型转换：char、short → int → float → double
+
+```c
+void main() {
+	char x = 1;
+	short y = 2;
+	int z = x + y;
+	return;
+}
+```
+
+<img src="images/image-20240328012456352.png" style="zoom:50%;" />
+
+```c
+void main() {
+	char x = 1;
+	short y = 2;
+	short z = x + y;
+	return;
+}
+```
+
+<img src="images/image-20240328012329451.png" style="zoom:50%;" />
+
+算术运算符：+（加）、-（减）、*（乘）、/（除）、%（取余）、++（自增）、--（自减）
+关系运算符：<（小于）、<=（小于等于）、>（大于）、>=（大于等于）、==（等于）、!=（不等于）
+逻辑运算符：&&（逻辑与）、||（逻辑或）、!（逻辑非）
+位运算符：<<、>>、&、|、~、^
+赋值运算符：=
+条件运算符：?:
+
+### 算术运算符
+
+#### +（加）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x + y;
+	return;
+}
+```
+
+<img src="images/image-20240328013603757.png" style="zoom:50%;" />
+
+#### -（减）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x - y;
+	return;
+}
+```
+
+<img src="images/image-20240328013820351.png" style="zoom:50%;" />
+
+#### *（乘）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x * y;
+	return;
+}
+```
+
+<img src="images/image-20240328013941956.png" style="zoom:50%;" />
+
+#### /（除）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x / y;
+	return;
+}
+```
+
+<img src="images/image-20240328014056515.png" style="zoom:50%;" />
+
+#### %（取余）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x % y;
+	return;
+}
+```
+
+<img src="images/image-20240328014312379.png" style="zoom:50%;" />
+
+#### ++（自增）
+
+x++：先运算，再自增
+++x：先自增，再运算
+
+```c
+void main() {
+	int x = 1;
+	x++;
+	return;
+}
+```
+
+<img src="images/image-20240328015443965.png" style="zoom:50%;" />
+
+```c
+void main() {
+	int x = 1;
+	++x;
+	return;
+}
+```
+
+<img src="images/image-20240328021008416.png" style="zoom:50%;" />
+
+```c
+void main() {
+	int x = 1;
+	int y = x++;
+	return;
+}
+```
+
+<img src="images/image-20240328014445141.png" style="zoom:50%;" />
+
+```c
+void main() {
+	int x = 1;
+	int y = ++x;
+	return;
+}
+```
+
+<img src="images/image-20240328015641777.png" style="zoom:50%;" />
+
+#### --（自减）
+
+x--：先运算，再自减
+--x：先自减，再运算
+
+```c
+void main() {
+	int x = 1;
+	x--;
+	return;
+}
+```
+
+<img src="images/image-20240328015919067.png" style="zoom:50%;" />
+
+```c
+void main() {
+	int x = 1;
+	--x;
+	return;
+}
+```
+
+<img src="images/image-20240328021132357.png" style="zoom:50%;" />
+
+```c
+void main() {
+	int x = 1;
+	int y = x--;
+	return;
+}
+```
+
+<img src="images/image-20240328014608327.png" style="zoom:50%;" />
+
+```c
+void main() {
+	int x = 1;
+	int y = --x;
+	return;
+}
+```
+
+<img src="images/image-20240328020044313.png" style="zoom:50%;" />
+
+### 关系运算符
+
+#### <（小于）
+
+```
+```
