Add some notes. 2024/03/29

--- a/【笔记】02 C.md
+++ b/【笔记】02 C.md
@@ -433,9 +433,11 @@ void main() {
 算术运算符：+（加）、-（减）、*（乘）、/（除）、%（取余）、++（自增）、--（自减）
 关系运算符：<（小于）、<=（小于等于）、>（大于）、>=（大于等于）、==（等于）、!=（不等于）
 逻辑运算符：&&（逻辑与）、||（逻辑或）、!（逻辑非）
-位运算符：<<、>>、&、|、~、^
+位运算符：<<（左移）、>>（右移）、&（按位与）、|（按位或）、~（按位取反）、^（按位异或）
 赋值运算符：=
 条件运算符：?:
+
+
 
 ### 算术运算符
 
@@ -452,6 +454,8 @@ void main() {
 
 <img src="images/image-20240328013603757.png" style="zoom:50%;" />
 
+
+
 #### -（减）
 
 ```c
@@ -464,6 +468,8 @@ void main() {
 ```
 
 <img src="images/image-20240328013820351.png" style="zoom:50%;" />
+
+
 
 #### *（乘）
 
@@ -478,6 +484,8 @@ void main() {
 
 <img src="images/image-20240328013941956.png" style="zoom:50%;" />
 
+
+
 #### /（除）
 
 ```c
@@ -491,6 +499,8 @@ void main() {
 
 <img src="images/image-20240328014056515.png" style="zoom:50%;" />
 
+
+
 #### %（取余）
 
 ```c
@@ -503,6 +513,8 @@ void main() {
 ```
 
 <img src="images/image-20240328014312379.png" style="zoom:50%;" />
+
+
 
 #### ++（自增）
 
@@ -549,6 +561,8 @@ void main() {
 
 <img src="images/image-20240328015641777.png" style="zoom:50%;" />
 
+
+
 #### --（自减）
 
 x--：先运算，再自减
@@ -594,9 +608,427 @@ void main() {
 
 <img src="images/image-20240328020044313.png" style="zoom:50%;" />
 
+
+
 ### 关系运算符
 
 #### <（小于）
 
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	if (x < y) {
+		int z = 1;
+	}
+	else {
+		int z = 0;
+	}
+	return;
+}
 ```
+
+
+
+
+
+#### <=（小于等于）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	if (x <= y) {
+		int z = 1;
+	}
+	else {
+		int z = 0;
+	}
+	return;
+}
 ```
+
+
+
+
+
+#### >（大于）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	if (x > y) {
+		int z = 1;
+	}
+	else {
+		int z = 0;
+	}
+	return;
+}
+```
+
+
+
+
+
+#### >=（大于等于）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	if (x >= y) {
+		int z = 1;
+	}
+	else {
+		int z = 0;
+	}
+	return;
+}
+```
+
+
+
+
+
+#### ==（等于）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	if (x == y) {
+		int z = 1;
+	}
+	else {
+		int z = 0;
+	}
+	return;
+}
+```
+
+
+
+
+
+#### !=（不等于）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	if (x != y) {
+		int z = 1;
+	}
+	else {
+		int z = 0;
+	}
+	return;
+}
+```
+
+
+
+
+
+### 逻辑运算符
+
+#### &&（逻辑与）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x && y;
+	return;
+}
+```
+
+<img src="images/image-20240329002450927.png" style="zoom:50%;" />
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = 3;
+	int r = x > y && x < z;
+	return;
+}
+```
+
+<img src="images/image-20240329002635307.png" style="zoom:50%;" />
+
+
+
+#### ||（逻辑或）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x || y;
+	return;
+}
+```
+
+<img src="images/image-20240329002940617.png" style="zoom:50%;" />
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = 3;
+	int r = x > y || x < z;
+	return;
+}
+```
+
+<img src="images/image-20240329003106520.png" style="zoom:50%;" />
+
+
+
+#### !（逻辑非）
+
+```c
+void main() {
+	int x = 3;
+	int y = !x;
+	return;
+}
+```
+
+<img src="images/image-20240329002026125.png" style="zoom:50%;" />
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = !(x > y);
+	return;
+}
+```
+
+<img src="images/image-20240329002247005.png" style="zoom:50%;" />
+
+
+
+### 位运算符
+
+#### <<（左移）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x << y;
+	return;
+}
+```
+
+<img src="images/image-20240329004037662.png" style="zoom:50%;" />
+
+
+
+#### >>（右移）
+
+有符号数：算术右移（sar）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x >> y;
+	return;
+}
+```
+
+<img src="images/image-20240329004152839.png" style="zoom:50%;" />
+
+无符号数：逻辑右移（shr）
+
+```c
+void main() {
+	unsigned int x = 1;
+	int y = 2;
+	int z = x >> y;
+	return;
+}
+```
+
+<img src="images/image-20240329004916686.png" style="zoom:50%;" />
+
+
+
+#### &（按位与）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x & y;
+	return;
+}
+```
+
+<img src="images/image-20240329003511169.png" style="zoom:50%;" />
+
+
+
+#### |（按位或）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x | y;
+	return;
+}
+```
+
+<img src="images/image-20240329003614976.png" style="zoom:50%;" />
+
+
+
+#### ~（按位取反）
+
+```c
+void main() {
+	int x = 1;
+	int y = ~x;
+	return;
+}
+```
+
+<img src="images/image-20240329003854250.png" style="zoom:50%;" />
+
+
+
+#### ^（按位异或）
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x ^ y;
+	return;
+}
+```
+
+<img src="images/image-20240329003751433.png" style="zoom:50%;" />
+
+
+
+### 赋值运算符
+
+拓展赋值运算符
+	算术运算：+=、-=、*=、/=、%=
+	位运算：<<=、>>=、&=、|=、^=
+
+| 拓展赋值运算符表达式 | 赋值运算符表达式 |
+| :------------------: | :--------------: |
+|       x += y;        |    x = x + y;    |
+|       x -= y;        |    x = x - y;    |
+|       x *= y;        |    x = x * y;    |
+|       x /= y;        |    x = x / y;    |
+|       x %= y;        |    x = x % y;    |
+|       x <<= y;       |   x = x << y;    |
+|       x >>= y;       |   x = x >> y;    |
+|       x &= y;        |    x = x & y;    |
+|       x \|= y;       |   x = x \| y;    |
+|       x ^= y;        |    x = x ^ y;    |
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	x = x + y;
+	return;
+}
+```
+
+<img src="images/image-20240329011615783.png" style="zoom:50%;" />
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	x += y;
+	return;
+}
+```
+
+<img src="images/image-20240329011731632.png" style="zoom:50%;" />
+
+
+
+### 条件运算符（?:）
+
+条件运算符表达式会被编译器优化的很不一样
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x > y ? 3 : 4;
+	return;
+}
+```
+
+<img src="images/image-20240329013136239.png" style="zoom:50%;" />
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x > y ? 4 : 3;
+	return;
+}
+```
+
+<img src="images/image-20240329013300249.png" style="zoom:50%;" />
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x > y ? 3 : 5;
+	return;
+}
+```
+
+<img src="images/image-20240329013015111.png" style="zoom:50%;" />
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x > y ? 5 : 3;
+	return;
+}
+```
+
+<img src="images/image-20240329012858696.png" style="zoom:50%;" />
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	int z = x > y ? x : y;
+	return;
+}
+```
+
+<img src="images/image-20240329013426885.png" style="zoom:50%;" />
+
+
+
+### 运算符的优先级
+
+运算符的优先级：通过()改变
+
+
+
+## 11 分支语句
+
+if语句
