Add some notes. 2024/03/29

--- a/【笔记】01 汇编.md
+++ b/【笔记】01 汇编.md
@@ -920,7 +920,7 @@ POP EBP
 RET
 ```
 
-![](images/image-20240122003246288.png)
+<img src="images/image-20240329020909669.png" style="zoom:50%;" />
 
 
 
