--- a/【笔记】02 C.md
+++ b/【笔记】02 C.md
@@ -369,9 +369,9 @@ void main() {
 Hello, World!
 ```
 
-<img src="images/image-20240328004436947.png" style="zoom:50%;" />
+<img src="images/image-20240330051049399.png" style="zoom:50%;" />
 
-<img src="images/image-20240328004841104.png" style="zoom:50%;" />
+<img src="images/image-20240330051127836.png" style="zoom:50%;" />
 
 
 
@@ -398,9 +398,9 @@ void main() {
 中国
 ```
 
-<img src="images/image-20240328010453199.png" style="zoom:50%;" />
+<img src="images/image-20240330051248468.png" style="zoom:50%;" />
 
-<img src="images/image-20240328010532176.png" style="zoom:50%;" />
+<img src="images/image-20240330051309358.png" style="zoom:50%;" />
 
 
 
@@ -1031,4 +1031,160 @@ void main() {
 
 ## 11 分支语句
 
-if语句
+```c
+if (表达式1) {
+	// 代码块
+}
+else if (表达式2) {
+	// 代码块
+}
+······
+else if (表达式n) {
+	// 代码块
+}
+else {
+	// 代码块
+}
+```
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	if (x > y) {
+		int z = 1;
+	}
+	else if (x == y) {
+		int z = 2;
+	}
+	else {
+		int z = 3;
+	}
+	return;
+}
+```
+
+<img src="images/image-20240330001512937.png" style="zoom:50%;" />
+
+
+
+## 12 switch语句
+
+```c
+switch (表达式) {
+case 常量表达式1:
+	// 代码块
+	break;
+case 常量表达式2:
+	// 代码块
+	break;
+······
+case 常量表达式n:
+	// 代码块
+	break;
+default:
+	// 代码块
+}
+```
+
+```c
+void main() {
+	int x = 1;
+	switch (x) {
+		int y;
+	case 1:
+		y = 1;
+		break;
+	case 2:
+		y = 2;
+		break;
+	default:
+		y = 3;
+	}
+	return;
+}
+```
+
+<img src="images/image-20240330002714863.png" style="zoom:50%;" />
+
+
+
+## 13 switch语句为什么高效
+
+条件少：switch语句与if-else语句几乎没有区别
+条件多：switch语句比if-else语句高效
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	if (x == 7) {
+		y += 1;
+	}
+	else if (x == 34) {
+		y += 2;
+	}
+	else if (x == 27) {
+		y += 3;
+	}
+	else if (x == 48) {
+		y += 4;
+	}
+	else {
+		y += 5;
+	}
+	return;
+}
+```
+
+<img src="images/image-20240330003626547.png" style="zoom:50%;" />
+<img src="images/image-20240330003718313.png" style="zoom:50%;" />
+
+解析：
+22h = 34
+1Bh = 27
+30h = 48
+
+
+
+```c
+void main() {
+	int x = 1;
+	int y = 2;
+	switch (x) {
+	case 7:
+		y += 1;
+		break;
+	case 34:
+		y += 2;
+		break;
+	case 27:
+		y += 3;
+		break;
+	case 48:
+		y += 4;
+		break;
+	default:
+		y += 5;
+	}
+	return;
+}
+```
+
+<img src="images/image-20240330004621135.png" style="zoom:50%;" />
+<img src="images/image-20240330005653942.png" style="zoom:50%;" />
+
+<img src="images/image-20240330050121119.png" style="zoom:50%;" />
+
+解析：
+
+<img src="images/image-20240330045924952.png" style="zoom:50%;" />
+
+![](images/image-20240330050646732.png)
+
+
+
+
+
+
+
