Add some notes. 2024/04/15

--- a/【笔记】02 C.md
+++ b/【笔记】02 C.md
@@ -628,7 +628,7 @@ void main() {
 }
 ```
 
-
+<img src="images/image-20240413202252904.png" style="zoom:50%;" />
 
 
 
@@ -648,7 +648,7 @@ void main() {
 }
 ```
 
-
+<img src="images/image-20240413202557644.png" style="zoom:50%;" />
 
 
 
@@ -668,7 +668,7 @@ void main() {
 }
 ```
 
-
+<img src="images/image-20240413202704192.png" style="zoom:50%;" />
 
 
 
@@ -688,7 +688,7 @@ void main() {
 }
 ```
 
-
+<img src="images/image-20240413202811416.png" style="zoom: 50%;" />
 
 
 
@@ -708,7 +708,7 @@ void main() {
 }
 ```
 
-
+<img src="images/image-20240413202955421.png" style="zoom:50%;" />
 
 
 
@@ -728,7 +728,7 @@ void main() {
 }
 ```
 
-
+<img src="images/image-20240413203059051.png" style="zoom:50%;" />
 
 
 
@@ -1181,6 +1181,60 @@ void main() {
 <img src="images/image-20240330045924952.png" style="zoom:50%;" />
 
 ![](images/image-20240330050646732.png)
+
+
+
+## 14 循环语句（while）
+
+go语句
+
+```c
+int sum(int x) {
+	int n = 0;
+	int i = 1;
+loop:
+	n += i;
+	i++;
+	if (i <= x) {
+		goto loop;
+	}
+	return n;
+}
+```
+
+<img src="images/image-20240410011449164.png" style="zoom:50%;" />
+
+
+
+循环语句：while语句、do..while语句、for语句
+
+```c
+while (表达式) {
+	// 代码块
+}
+```
+
+
+
+```c
+int sum(int x) {
+	int n = 0;
+	int i = 1;
+	while (i <= x) {
+		n += i;
+		i++;
+	}
+	return n;
+}
+```
+
+<img src="images/image-20240410010157458.png" style="zoom:50%;" />
+
+
+
+## 15 循环语句（do..while、for）
+
+
 
 
 
